fix z-index of sidebar and topbar

--- a/angular-ui/src/app/components/topbar/topbar.component.scss
+++ b/angular-ui/src/app/components/topbar/topbar.component.scss
@@ -16,7 +16,7 @@
   padding-left: 32px;
   padding-right: 32px;
 
-  z-index: 10;
+  z-index: 500;
 
   box-shadow: 0px 2px 4px 4px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
